--- a/app/src/main/res/layout/food_detail_fragment.xml
+++ b/app/src/main/res/layout/food_detail_fragment.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
-    tools:context=".home.view.HomeFragment">
+    tools:context=".fooddetail.view.FoodDetailFragment"
+    android:background="@color/teal_200">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,7 +13,7 @@
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="Home Fragment"
+        android:text="Food Detail Fragment"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@id/btnOne"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,5 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
