--- a/app/src/main/res/layout/initial_fragment.xml
+++ b/app/src/main/res/layout/initial_fragment.xml
@@ -103,6 +103,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnCreate"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_marginStart="64dp"
