--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
-    tools:context=".records.view.RecordsFragment">
+    tools:context=".home.view.HomeFragment">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,7 +12,7 @@
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="Records Fragment"
+        android:text="Home Fragment"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@id/btnOne"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,19 +22,9 @@
         android:id="@+id/btnOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Food Detail"
+        android:text="Records"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnTwo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnOne"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
