--- a/app/src/main/res/layout/fragment_new_user.xml
+++ b/app/src/main/res/layout/fragment_new_user.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
-    tools:context=".home.view.HomeFragment">
+    tools:context=".newuser.view.NewUserFragment"
+    android:background="@color/teal_200">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,17 +13,8 @@
         android:textSize="32sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:text="Home Fragment"
+        android:text="New User Fragment"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@id/btnOne"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnOne"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Records"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
