--- a/app/src/main/res/navigation/nav_graph_external.xml
+++ b/app/src/main/res/navigation/nav_graph_external.xml
@@ -5,16 +5,14 @@
     android:id="@+id/nav_graph_external"
     app:startDestination="@id/initialFragment">
 
+    <include app:graph="@navigation/nav_graph_internal" />
     <fragment
         android:id="@+id/initialFragment"
         android:name="com.amusset.glucofood.initial.view.InitialFragment"
-        android:label="initial_fragment"
-        tools:layout="@layout/initial_fragment" >
+        android:label="fragment_initial"
+        tools:layout="@layout/fragment_initial" >
         <action
             android:id="@+id/action_initialFragment_to_nav_graph_internal"
-            app:destination="@id/nav_graph_internal"
-            app:popUpTo="@id/nav_graph_internal"
-            app:popUpToInclusive="true"/>
+            app:destination="@id/nav_graph_internal" />
     </fragment>
-    <include app:graph="@navigation/nav_graph_internal" />
 </navigation>
