--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -355,7 +355,7 @@
         tools:listitem="@layout/food_item"
         app:layout_constraintTop_toBottomOf="@id/txtRecentRecords"/>-->
 
-    <include layout="@layout/food_item"
+    <include layout="@layout/record_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
