--- a/app/src/main/res/layout/fragment_records.xml
+++ b/app/src/main/res/layout/fragment_records.xml
@@ -74,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                tools:listitem="@layout/food_item"/>
+                tools:listitem="@layout/record_item"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
